--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,39 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Tracker: Gustavo Sepulveda</title>
-    <link href="../public/css/index.css" rel="stylesheet"> 
+    <link href="css/index.css" rel="stylesheet"> 
 </head>
     <body>
+
+        <h1>TO-DO LIST</h1>
+
         <div class="container">
 
-            <h1>Today's Plan</h1>
-
-            <form action="/addtask" method="POST">
+            <form action="/savetask" method="POST">
 
                 <input
                     class="newtask"
                     type="text"
                     name="newtask"
-                    placeholder="What do I need to do?"/>
+                    placeholder="Add a Task!"/>
 
-            <button>Add Task</button>
+            <button>Save Task</button>
 
 
-            <h2>To Do:</h2>
+            <h2>Tasks:</h2>
 
-            <!-- JS in order to create a new task-->
-            <!-- Any JS logic written between template tags will not be displayed -->
+
             <% for( var i = 0; i < task.length; i++){ %>
 
             <div class="task">
-                <!-- The "=" sign after the template tag  is what makes the expression within the brackets an output-->
-                <!-- Displaying the newtask task[i], .task displaying only the "task:" part of the JSON object -->
+
 
                 <input type="text" name="check" value="<%= task[i].task %>" />
                 <button class="edit" formaction="/edittask/<%=task[i].id%>" type="submit">Edit</button>
 
-                <button formaction="/removetask/<%=task[i].id%>" type="submit">Remove</button>
-            <!-- Makes more than one task appear -->
+                <button formaction="/deletetask/<%=task[i].id%>" type="submit">Remove</button>
+
             </div>
             <% } %>
         </form>
